force-app/main/default/objects/Opportunity/fields/Lease_ID__c.field-meta.xml
<CustomField>
    <fullName>Lease_ID__c</fullName>
    <inlineHelpText>Enter the ID of this lease from any associated system e.g. MRI</inlineHelpText>
    <label>Lease ID</label>
    <length>12</length>
    <type>Text</type>
</CustomField>