force-app/main/default/objects/Opportunity/fields/Local_Presence__c.field-meta.xml
<CustomField>
    <fullName>Local_Presence__c</fullName>
    <inlineHelpText>Enter the local presence and strategy (max 1024)</inlineHelpText>
    <label>Local Presence</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>