force-app/main/default/objects/Opportunity/fields/Matures_to_Standard_On__c.field-meta.xml
<CustomField>
    <fullName>Matures_to_Standard_On__c</fullName>
    <inlineHelpText>Select the first date at which the terms mature to standard.</inlineHelpText>
    <label>Matures to Standard On</label>
    <type>Date</type>
</CustomField>