force-app/main/default/objects/Opportunity/fields/Next_Step_due_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_due_Date__c</fullName>
    <inlineHelpText>Enter the date when the next step described above is due to be completed</inlineHelpText>
    <label>Next Step due Date</label>
    <type>Date</type>
</CustomField>