force-app/main/default/objects/Opportunity/fields/Next_Step_Update_Description__c.field-meta.xml
<CustomField>
    <fullName>Next_Step_Update_Description__c</fullName>
    <inlineHelpText>Enter the Next Step to be taken in the process</inlineHelpText>
    <label>Next Step Update</label>
    <type>TextArea</type>
</CustomField>