force-app/main/default/objects/Opportunity/fields/Non_Competition_Clause__c.field-meta.xml
<CustomField>
    <fullName>Non_Competition_Clause__c</fullName>
    <description>Non Competition Clause</description>
    <inlineHelpText>Non Competition Clause</inlineHelpText>
    <label>Non Competition Clause</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>