force-app/main/default/objects/Opportunity/fields/Non_Competition_Clause_Tier_Level__c.field-meta.xml
<CustomField>
    <fullName>Non_Competition_Clause_Tier_Level__c</fullName>
    <description>Non Competition Clause Tier Level</description>
    <inlineHelpText>Non Competition Clause Tier Level</inlineHelpText>
    <label>Non Competition Clause Tier Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tier 1</fullName>
            </value>
            <value>
                <fullName>Tier 2</fullName>
            </value>
            <value>
                <fullName>Tier 2a</fullName>
            </value>
            <value>
                <fullName>Tier 2b</fullName>
            </value>
            <value>
                <fullName>Tier 2c</fullName>
            </value>
            <value>
                <fullName>Tier 3a</fullName>
            </value>
            <value>
                <fullName>Tier 3b</fullName>
            </value>
            <value>
                <fullName>Tier 4</fullName>
            </value>
            <value>
                <fullName>Tier 4*</fullName>
            </value>
            <value>
                <fullName>Tier 5</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>