force-app/main/default/objects/Opportunity/fields/Occupancy_Cost__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Cost__c</fullName>
    <formula>Occupancy_Cost_Local__c   *  FX_Rate__c</formula>
    <inlineHelpText>This is Annual Base Rent  plus Net T/O Rent plus Service Charge</inlineHelpText>
    <label>Occupancy Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>