force-app/main/default/objects/Opportunity/fields/Occupancy_Cost_Local__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Cost_Local__c</fullName>
    <formula>IF( Annual_Base_Rent_Local__c  &gt;  Annual_ToR_Gross_Local__c , Annual_Base_Rent_Local__c  , Annual_ToR_Gross_Local__c)  +  Annual_Service_Charge_Local__c</formula>
    <label>Occupancy Cost (Local)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>