force-app/main/default/objects/Opportunity/fields/Occupancy_Cost_p__c.field-meta.xml
<CustomField>
    <fullName>Occupancy_Cost_p__c</fullName>
    <formula>Occupancy_Cost__c  /   Projected_Sales__c</formula>
    <inlineHelpText>Occupancy Cost as a percentage of Projected Sales</inlineHelpText>
    <label>Occupancy Cost %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>