force-app/main/default/objects/Opportunity/fields/Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Date__c</fullName>
    <inlineHelpText>Enter the Open date if this opportunity has been budgetted or not</inlineHelpText>
    <label>Actual Open Date</label>
    <type>Date</type>
</CustomField>