force-app/main/default/objects/Opportunity/fields/Opportunity_Characteristics__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Characteristics__c</fullName>
    <inlineHelpText>Select which values from the available list apply to this opportunity</inlineHelpText>
    <label>Opportunity Characteristics</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Unlikely for 2012</fullName>
            </value>
            <value>
                <fullName>Power Brand - Anchor</fullName>
            </value>
            <value>
                <fullName>Power Brand - Flagship</fullName>
            </value>
            <value>
                <fullName>Global Brand</fullName>
            </value>
            <value>
                <fullName>Positioning</fullName>
            </value>
            <value>
                <fullName>Asked to Reserve Space</fullName>
            </value>
            <value>
                <fullName>Top 6</fullName>
            </value>
            <value>
                <fullName>Gucci &amp; Prada</fullName>
            </value>
            <value>
                <fullName>Not on Dream Plan</fullName>
            </value>
            <value>
                <fullName>On Dream Plan</fullName>
            </value>
            <value>
                <fullName>Unit Reserved</fullName>
            </value>
            <value>
                <fullName>Site Visit Planned</fullName>
            </value>
            <value>
                <fullName>Top Brands</fullName>
            </value>
            <value>
                <fullName>Deals to accelerate forward</fullName>
            </value>
            <value>
                <fullName>Brands to push, other brands to sign 1st</fullName>
            </value>
            <value>
                <fullName>Priority meetings</fullName>
            </value>
            <value>
                <fullName>Follow-up Meetings</fullName>
            </value>
            <value>
                <fullName>Focus Brands (31/07)</fullName>
            </value>
            <value>
                <fullName>2nd Tier Brands</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>