force-app/main/default/objects/Opportunity/fields/Opportunity_Focus__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Focus__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>a space to categorize deals for easier future reference</inlineHelpText>
    <label>Opportunity Focus</label>
    <referenceTo>Opportunity_Focus__c</referenceTo>
    <relationshipLabel>Deals</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>