force-app/main/default/objects/Opportunity/fields/Opportunity_Introduction__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Introduction__c</fullName>
    <inlineHelpText>Select the principal source or origin of this opportunity</inlineHelpText>
    <label>Opportunity Introduction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>VR Internal</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Agent (Commission)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>