force-app/main/default/objects/Opportunity/fields/Opportunity_Priority__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Priority__c</fullName>
    <inlineHelpText>On a scale of 1 (unlikely) to 5 (highly likely) assign the probability of getting this opportunity signed off</inlineHelpText>
    <label>Probability of Signature</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>