force-app/main/default/objects/Opportunity/fields/Original_Expected_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Original_Expected_Open_Date__c</fullName>
    <label>Original Expected Open Date</label>
    <type>Date</type>
</CustomField>