force-app/main/default/objects/Opportunity/fields/Outlets__c.field-meta.xml
<CustomField>
    <fullName>Outlets__c</fullName>
    <inlineHelpText>Enter any information about other outlet locations (max 1024)</inlineHelpText>
    <label>Outlets</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>