force-app/main/default/objects/Opportunity/fields/Payback__c.field-meta.xml
<CustomField>
    <fullName>Payback__c</fullName>
    <description>Payback on termination or relocation</description>
    <inlineHelpText>Payback on termination or relocation</inlineHelpText>
    <label>Payback</label>
    <type>TextArea</type>
</CustomField>