force-app/main/default/objects/Opportunity/fields/Pop_Up_Type__c.field-meta.xml
<CustomField>
    <fullName>Pop_Up_Type__c</fullName>
    <inlineHelpText>Flexible space: brand wants additional space. Brand Test: pop up is to test if the brand works in the Village.  Seasonal pop-up: eg Havainas for summer.  Refit: using pop up during a refit.  Pop-up: general definition if other options not relevant</inlineHelpText>
    <label>Pop-Up Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand Test</fullName>
            </value>
            <value>
                <fullName>Flexible Space</fullName>
            </value>
            <value>
                <fullName>Refit</fullName>
            </value>
            <value>
                <fullName>Seasonal Pop-Up</fullName>
            </value>
            <value>
                <fullName>Pop-Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>