force-app/main/default/objects/Opportunity/fields/Position_Rating__c.field-meta.xml
<CustomField>
    <fullName>Position_Rating__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>Select the position rating that best describes the brand in this village</inlineHelpText>
    <label>Position Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>