force-app/main/default/objects/Opportunity/fields/Previous_Stage__c.field-meta.xml
<CustomField>
    <fullName>Previous_Stage__c</fullName>
    <label>Previous Stage</label>
    <length>150</length>
    <type>Text</type>
</CustomField>