force-app/main/default/objects/Opportunity/fields/Price_Point2__c.field-meta.xml
<CustomField>
    <fullName>Price_Point2__c</fullName>
    <formula>TEXT( Account.Price_Point__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Price Point pulled from the Account/Brand object</inlineHelpText>
    <label>Price Point2</label>
    <type>Text</type>
</CustomField>