force-app/main/default/objects/Opportunity/fields/Price_Point__c.field-meta.xml
<CustomField>
    <fullName>Price_Point__c</fullName>
    <inlineHelpText>The average price point of the brand’s product</inlineHelpText>
    <label>Price Point</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Best above €100</fullName>
            </value>
            <value>
                <fullName>Better €50 to €100</fullName>
            </value>
            <value>
                <fullName>Good under €50</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>