force-app/main/default/objects/Opportunity/fields/Primary_Deal__c.field-meta.xml
<CustomField>
    <fullName>Primary_Deal__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Set this option if you wish to pull the Deal into Qlikview for BCAP comparison</description>
    <inlineHelpText>Set this option if you wish to pull the Deal into Qlikview for BCAP comparison</inlineHelpText>
    <label>Primary Deal</label>
    <type>Checkbox</type>
</CustomField>