force-app/main/default/objects/Opportunity/fields/Projected_Income__c.field-meta.xml
<CustomField>
    <fullName>Projected_Income__c</fullName>
    <formula>Projected_Income_Local__c  *  FX_Rate__c</formula>
    <label>1st Year Projected Income</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>