force-app/main/default/objects/Opportunity/fields/Projected_Income_Annualized__c.field-meta.xml
<CustomField>
    <fullName>Projected_Income_Annualized__c</fullName>
    <formula>IF( Annualized_Projected_Figures__c == FALSE, Projected_Income_Local_v1__c * Annualization_Factor__c, Projected_Income_Local_v1__c)</formula>
    <inlineHelpText>Projected Income annualized in local currency</inlineHelpText>
    <label>Projected Income Annualized</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>