force-app/main/default/objects/Opportunity/fields/Projected_Income_Local__c.field-meta.xml
<CustomField>
    <fullName>Projected_Income_Local__c</fullName>
    <formula>Projected_Sales_Local__c  *  Projected_Return_Local__c</formula>
    <label>1st Year Proj. Income TO/Royalty (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>