force-app/main/default/objects/Opportunity/fields/Projected_Income_Local_v1__c.field-meta.xml
<CustomField>
    <fullName>Projected_Income_Local_v1__c</fullName>
    <inlineHelpText>Enter the projected income in local currency, blank this field to force a recalculation</inlineHelpText>
    <label>Projected Income (Local) v1</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>