force-app/main/default/objects/Opportunity/fields/Projected_Income_v1__c.field-meta.xml
<CustomField>
    <fullName>Projected_Income_v1__c</fullName>
    <inlineHelpText>Enter the projected income estimated for the 1st/next year of trading if this has not been pre-calculated from the income yield and the unit size. To force a recalculation then blank this field</inlineHelpText>
    <label>Projected Income v1</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>