force-app/main/default/objects/Opportunity/fields/Projected_Income_Yield__c.field-meta.xml
<CustomField>
    <fullName>Projected_Income_Yield__c</fullName>
    <formula>Projected_Income__c  /  Effective_Size__c</formula>
    <label>1st Year Projected Income Yield</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>