force-app/main/default/objects/Opportunity/fields/Projected_Income_Yield_Local__c.field-meta.xml
<CustomField>
    <fullName>Projected_Income_Yield_Local__c</fullName>
    <formula>Projected_Income_Local__c  /  (Effective_Size__c *  SF__c)</formula>
    <label>1st Year Proj. TO/Royalty Yield (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>