force-app/main/default/objects/Opportunity/fields/Projected_Income_Yield_Local_v1__c.field-meta.xml
<CustomField>
    <fullName>Projected_Income_Yield_Local_v1__c</fullName>
    <inlineHelpText>The Projected Income Yield in Local Currency, blank this field to force a recalculation</inlineHelpText>
    <label>Projected Income Yield (Local) v1</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>