force-app/main/default/objects/Opportunity/fields/Projected_Income_Yield_v1__c.field-meta.xml
<CustomField>
    <fullName>Projected_Income_Yield_v1__c</fullName>
    <inlineHelpText>Enter the projected income yield for the next trading full year unless this has been pre-calculated from the projected income and the unit size</inlineHelpText>
    <label>Projected Income Yield v1</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>