force-app/main/default/objects/Opportunity/fields/Projected_Return__c.field-meta.xml
<CustomField>
    <fullName>Projected_Return__c</fullName>
    <formula>Projected_Return_Local__c</formula>
    <label>1st Year Projected TO/Royalty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>