force-app/main/default/objects/Opportunity/fields/Projected_Return_Local__c.field-meta.xml
<CustomField>
    <fullName>Projected_Return_Local__c</fullName>
    <inlineHelpText>The Projected Return based on the Sales and Income Projections in Local currency.</inlineHelpText>
    <label>1st Year Projected Income % (Local)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>