force-app/main/default/objects/Opportunity/fields/Projected_Return_v1__c.field-meta.xml
<CustomField>
    <fullName>Projected_Return_v1__c</fullName>
    <inlineHelpText>Projected Return, blank this field to force a recalculation</inlineHelpText>
    <label>Projected Return v1</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>