force-app/main/default/objects/Opportunity/fields/Projected_Sales__c.field-meta.xml
<CustomField>
    <fullName>Projected_Sales__c</fullName>
    <formula>Projected_Sales_Local__c  *  FX_Rate__c</formula>
    <label>1st Year Projected Sales</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>