force-app/main/default/objects/Opportunity/fields/Projected_Sales_Local__c.field-meta.xml
<CustomField>
    <fullName>Projected_Sales_Local__c</fullName>
    <formula>Projected_Sales_Yield_Local_Converted__c *  Effective_Size__c</formula>
    <label>1st Year Projected Sales (Local)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>