force-app/main/default/objects/Opportunity/fields/Projected_Sales_v1__c.field-meta.xml
<CustomField>
    <fullName>Projected_Sales_v1__c</fullName>
    <inlineHelpText>Enter the projected sales expectation for the 1st year of trading unless this has been pre-calculated from the sales yield and the unit size. To force a recalculation then just blank this field</inlineHelpText>
    <label>Projected Sales v1</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>