force-app/main/default/objects/Opportunity/fields/Projected_Sales_Yield_Local__c.field-meta.xml
<CustomField>
    <fullName>Projected_Sales_Yield_Local__c</fullName>
    <inlineHelpText>The Annualized Sales Yield in Village Currency (per Sq.ft for Bicester and per Sq. mtr for all other villages)</inlineHelpText>
    <label>1st Year Projected Sales Yield (Local)</label>
    <precision>11</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>