force-app/main/default/objects/Opportunity/fields/Projected_Yield__c.field-meta.xml
<CustomField>
    <fullName>Projected_Yield__c</fullName>
    <formula>Projected_Sales__c  / Effective_Size__c</formula>
    <label>1st Year Projected Yield</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>