force-app/main/default/objects/Opportunity/fields/Projected_Yield_v1__c.field-meta.xml
<CustomField>
    <fullName>Projected_Yield_v1__c</fullName>
    <inlineHelpText>Enter the projected sales yield for the 1st/next year of trading but only if the unit size is known unless it has been pre-calculated using the projected sales and the unit size</inlineHelpText>
    <label>Projected Yield v1</label>
    <precision>13</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>