force-app/main/default/objects/Opportunity/fields/Proportion__c.field-meta.xml
<CustomField>
    <fullName>Proportion__c</fullName>
    <formula>Unit__r.Proportion__c</formula>
    <inlineHelpText>Based on the effective size, this brand occupies X per cent of the village’s total space.</inlineHelpText>
    <label>Proportion</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>