force-app/main/default/objects/Opportunity/fields/Proposed_Unit_ID__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Unit_ID__c</fullName>
    <inlineHelpText>If known enter the Unit ID proposed for this opportunity</inlineHelpText>
    <label>Proposed Unit ID(s)</label>
    <type>TextArea</type>
</CustomField>