force-app/main/default/objects/Opportunity/fields/Ratchet__c.field-meta.xml
<CustomField>
    <fullName>Ratchet__c</fullName>
    <description>Mechanism for Base Rent uplift</description>
    <inlineHelpText>Mechanism for Base Rent uplift</inlineHelpText>
    <label>Ratchet</label>
    <type>TextArea</type>
</CustomField>