force-app/main/default/objects/Opportunity/fields/Reason_No_Gift_Given__c.field-meta.xml
<CustomField>
    <fullName>Reason_No_Gift_Given__c</fullName>
    <label>Reason No Gift Given</label>
    <length>255</length>
    <type>Text</type>
</CustomField>