force-app/main/default/objects/Opportunity/fields/Reforecast_Budget_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Reforecast_Budget_Open_Date__c</fullName>
    <label>Reforecast Budget Open Date</label>
    <type>Date</type>
</CustomField>