force-app/main/default/objects/Opportunity/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <formula>Village__r.Region__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The region pulled from the Village for this opportunity</inlineHelpText>
    <label>Region</label>
    <type>Text</type>
</CustomField>