force-app/main/default/objects/Opportunity/fields/Retail_Recomendations__c.field-meta.xml
<CustomField>
    <fullName>Retail_Recomendations__c</fullName>
    <inlineHelpText>The retail department’s feedback on this brand.</inlineHelpText>
    <label>Retail Recomendations</label>
    <type>TextArea</type>
</CustomField>