force-app/main/default/objects/Opportunity/fields/Return__c.field-meta.xml
<CustomField>
    <fullName>Return__c</fullName>
    <formula>Projected_Income_v1__c  /  Projected_Sales_v1__c</formula>
    <inlineHelpText>This is the simple retrun based on the Projected Sales &amp; Income</inlineHelpText>
    <label>Return %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>