force-app/main/default/objects/Opportunity/fields/Sales_Rating__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rating__c</fullName>
    <defaultValue>0</defaultValue>
    <inlineHelpText>This is normally calculated based on the ratings attached to the village if the Sales yield is known otherwise enter the rating to be applied to this brand in this village</inlineHelpText>
    <label>Sales Rating</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>