force-app/main/default/objects/Opportunity/fields/Segment2__c.field-meta.xml
<CustomField>
    <fullName>Segment2__c</fullName>
    <formula>TEXT( Account.Segment__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Brand segment pulled from the Account/Brand object</inlineHelpText>
    <label>Segment2</label>
    <type>Text</type>
</CustomField>